# BQLabs-Olympics-Hackathon

./: .gitignore  README.md  package-lock.json  package.json
Backend/: README.md
Backend/slash-verification/: Cargo.toml
Backend/slash-verification/src/: claim.rs  info.rs  main.rs  risk.rs  types.rs  utils.rs
Backend/slash-verification/src/contract/artifacts/: Gov.json  InsuranceCover.json
Frontend/: .eslintrc.js  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json
Frontend/src/: global.ts
Frontend/src/app/: layout.tsx  provider.tsx
Frontend/src/app/claim/: clientPage.tsx
Frontend/src/app/claims/: clientPage.tsx  page.tsx
Frontend/src/app/connect/: clientPage.tsx  page.tsx
Frontend/src/constant/: config.ts  contracts.ts  contracts.tsx
Frontend/src/contexts/: connectkit.tsx  wagmiProvider.tsx
Frontend/src/hooks/: global.ts
Frontend/src/lib/: config.ts  formulat.ts  utils.ts  wagmi.ts
Frontend/src/styles/: globals.css
Frontend/src/types/: main.ts
Smart Contracts/: 4.5.0  hardhat.config.js
Smart Contracts/abis/: Gov.json  InsuranceCover.json  InsurancePool.json  MockERC20.json
Smart Contracts/cache/: solidity-files-cache.json
Smart Contracts/contracts/: CoverLib.sol  Gov.sol  InsuranceCover.sol  InsurancePool.sol  MockERC20.sol
Smart Contracts/test/: Gov.test.js  InsuranceCover.test.js  InsurancePool.test.js
cache/: solidity-files-cache.json
contracts/: Gov.sol  InsuranceCover.sol  InsurancePool.sol  LP.sol
scripts/: deploy.js  deployPool.js  index.js
test/: Gov-test.js  LP-test.js
(+97 files in other folders)
