[package]
name = "slash-deduction"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy = { version = "0.2", features = ["full", "node-bindings"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.124"
eyre = "0.6.12"
tokio = { version = "1", features = ["full"] }
dotenv = "0.15.0"
pwr-rs = "0.2.1"
chrono = "0.4.38"
actix-web = "4.9.0"
actix-cors = "0.7.0"
env_logger = "0.11.5"
rust_decimal = "1.35.0"
log = "0.4"
tower = { version = "0.4.13", features = ["full"] }
hyper = "1.4.1"
